<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.ManualSignInActivity">

    <Button
        android:id="@+id/cmdScan"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_margin="10dp"
        android:background="@layout/button_rounded_background"
        android:text="@string/scan"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/txtStudentId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cmdScan"
        android:layout_marginTop="20dp"
        android:autofillHints="E.g. 11-1810"
        android:hint="@string/studentID"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        tools:targetApi="26" />

    <Button
        android:id="@+id/cmdCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtStudentId"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@layout/button_rounded_background"
        android:text="@string/searchid"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/cmdRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cmdCheck"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:background="@layout/button_rounded_background"
        android:text="@string/refresh_database"
        android:textColor="@color/colorAccent" />

</RelativeLayout>