
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_item_type_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/item_type"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_item_type_lb"
        android:layout_toLeftOf="@id/item_info"
        android:layout_toStartOf="@id/item_info"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:text="@string/tv_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        android:layout_toEndOf="@id/tv_item_type_lb"
        android:layout_marginStart="60dp" />


    <TextView
        android:id="@+id/tv_serial_no_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_item_type_lb"
        android:layout_marginTop="10dp"
        android:text="@string/item_serial_no"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tv_item_serial_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_item_type"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/tv_item_type"
        android:layout_alignLeft="@id/tv_item_type"
        android:layout_toEndOf="@id/tv_serial_no_lb"
        android:layout_toRightOf="@id/tv_serial_no_lb"
        android:layout_toLeftOf="@id/item_info"
        android:layout_toStartOf="@id/item_info"
        android:text="@string/tv_placeholder"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black" />

    <ImageView
        android:id="@+id/item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/click_to_get_more_info"
        android:src="@android:drawable/ic_dialog_info"
        android:background="@android:color/background_dark"/>


</RelativeLayout>
