<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/imgStudentPic"
        android:layout_width="200dp"
        android:layout_height="147dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/user_icon"
        android:src="@drawable/default_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listContainer"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_margin="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmdCheckIn"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent"
        android:background="@layout/button_rounded_background"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/listContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmdCheckOut"
        android:text="@string/sign_out"
        android:textColor="@color/colorAccent"
        android:background="@layout/button_rounded_background"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/listContainer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgStudentPic">

        <TextView
            android:id="@+id/tv_std_name_lb"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="28dp"
            android:text="@string/student_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_std_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="28dp"
            android:text="@string/tv_placeholder"
            app:layout_constraintStart_toEndOf="@+id/tv_std_name_lb"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_std_id_lb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="85dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="16dp"
            android:text="@string/student_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_std_name_lb" />

        <TextView
            android:id="@+id/tv_std_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="12dp"
            android:text="@string/tv_placeholder"
            app:layout_constraintStart_toEndOf="@+id/tv_std_id_lb"
            app:layout_constraintTop_toBottomOf="@+id/tv_std_name" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>